# GROWTH-DAQ

./: .gitignore  .gitmodules  README.md
.circleci/: config.yml
ci/docker/: Dockerfile  Makefile
controller/: Makefile
controller/god/: growth.god.conf  growth_god
controller/lib/: rpi.rb
controller/lib/growth_controller/: config.rb  console_modules.rb  constants.rb  controller_module.rb  daq.rb  detector.rb  detector_controller.rb  display.rb  heartbeat.rb  hk.rb  hv.rb  keys.rb  logger.rb  sampling_logger.rb
controller/lib/growth_if/: README.md  gpio.rb  slowadc.rb  slowdac.rb
controller/lib/rpi/: README.md  bme280.rb  i2cbus.rb  sample.rb  validations.rb
daq/: CMakeLists.txt  README.md  _clang-format
daq/cli/: growth_cli.cc  growth_reg.cc
daq/cli/example/: register-set-sequence.yaml
daq/configurationFile/: configuration.yaml  configuration.yaml~  configuration_20150929_1409.yaml  configuration_20151002_2010_mac.yaml  configuration_20151015_1457_mac.yaml  configuration_20151029_1302_pi.yaml  configuration_20160828_2247_fy2016.yaml  configuration_growth-fy2016a.yaml  configuration_growth-fy2016b.yaml  configuration_growth-fy2016c.yaml  configuration_growth-fy2016c.yaml~  configuration_growth-fy2016d.yaml  configuration_growth-fy2016e.yaml  configuration_growth-fy2016f.yaml  configuration_growth-fy2016g.yaml  configuration_growth-fy2016s.yaml  configuration_growth-fy2016t.yaml  configuration_growth-fy2017_triggerMode.yaml  configuration_growth-fy2017a.yaml  configuration_growth-fy2017b.yaml
daq/configurationFile/growth-fy2015d/: configuration.yaml  configuration_without_wf.yaml
daq/include/: adcboard.hh  eventlistfile.hh  eventlistfilefits.hh  fitsutil.hh  mainthread.hh  messageserver.hh  registeraccessautomator.hh  rootutil.hh  stringutil.hh  timeutil.hh  types.h
daq/include/growth-fpga/: channelmanager.hh  channelmodule.hh  constants.hh  consumermanagereventfifo.hh  eventdecoder.hh  hitpatternmodule.hh  registeraccessinterface.hh  semaphoreregister.hh  slowadcdac.hh  types.hh
daq/include/spacewire/: rmapengine.hh  rmapinitiator.hh  rmappacket.hh  rmapprotocol.hh  rmapreplystatus.hh  rmaptarget.hh  rmaptargetnode.hh  rmaptransaction.hh  rmaputilities.hh  serialport.hh  spacewireif.hh  spacewireifovertcp.hh  spacewireifoveruart.hh  spacewirepacket.hh  spacewireprotocol.hh  spacewiressdtpmodule.hh  spacewiressdtpmoduleuart.hh  spacewireutil.hh  spacewireutilities.hh  tcpsocket.hh  types.hh
daq/src/: .gitignore  ADCDAC.cc  ADCDAC.hh  EventListFile.hh  EventListFileFITS.cc  EventListFileFITS.hh  EventListFileROOT.cc  EventListFileROOT.hh  GROWTH_FY2015_ADC.hh  MainThread.hh  MessageServer.cc  MessageServer.hh  SerialPort.cc  SerialPort.hh  SpaceWireIFOverUART.hh  SpaceWireSSDTPModuleUART.hh  adcboard.cc  adcboard.hh  adcdac.cc  adcdac.hh  eventlistfile.hh  eventlistfilefits.cc  eventlistfilefits.hh  eventlistfileroot.cc  eventlistfileroot.hh  growth_daq.cc  growth_fy2015_read_gps.cc  growth_fy2015_read_hk.cc  mainthread.cc  mainthread.hh  messageserver.cc  messageserver.hh  registeraccessautomator.cc  registeraccessautomator.hh  serialport.cc  stringutil.cc  timeutil.cc
daq/src/GROWTH_FY2015_ADCModules/: ChannelManager.hh  ChannelModule.hh  Constants.hh  ConsumerManager.hh  ConsumerManagerEventFIFO.hh  DataRecorder.hh  Debug.hh  EventDecoder.hh  RMAPHandler.hh  RMAPHandlerUART.hh  RegisterAccessInterface.hh  SemaphoreRegister.hh  Types.hh
daq/src/growth-fpga/: channelmanager.cc  channelmanager.hh  channelmodule.cc  channelmodule.hh  consumermanager.hh  consumermanagereventfifo.cc  consumermanagereventfifo.hh  eventdecoder.cc  eventdecoder.hh  hitpatternmodule.cc  hitpatternmodule.hh  registeraccessinterface.cc  registeraccessinterface.hh  rmaphandleruart.hh  semaphoreregister.cc  semaphoreregister.hh  slowadcdac.cc  slowadcdac.hh  types.hh
daq/src/raspi/: adcdac.cc  adcdac.hh
daq/src/spacewire/: rmapengine.cc  rmapinitiator.cc  rmappacket.cc  rmapreplystatus.cc  spacewireifoveruart.cc  spacewiressdtpmodule.cc  spacewiressdtpmoduleuart.cc  spacewireutil.cc  tcpsocket.cc
daq/src/test/: test_growth_fy2015_adc_cpuTrigger.cc  test_growth_fy2015_adc_loadConfigurationFile.cc  test_messageclient.rb  test_messageserver.cc  test_readADC.cc  test_rmap_to_fpga.cc  test_rmaphandler.cc  test_serial.cc  test_serial_receive.cc  test_serial_ssdtp.cc  test_setDAC.cc
daq/src/wiringPi/: gertboard.h  lcd.h  softPwm.h  softTone.h  wiringPi.h  wiringPiI2C.h  wiringPiSPI.h  wiringSerial.h
fpga/: .gitattributes  .gitignore  Makefile  README.md
fpga/constraint/: GROWTH-FY2016_Bitstream.xdc  GROWTH-FY2016_Timing.xdc  GROWTH_FY2016_Pins.xdc
fpga/imports/: crcData.coe
fpga/ip/: EventFIFO.xcix  FIFO8x2kXilinx.xcix  clk_wiz_0.xcix  crcRomXilinx.xcix  fifo16x1k.xcix  fifo16x2k.xcix  fifo16x8k.xcix  fifo8x1k.xcix  fifo9x1k.xcix  ram16x1024.xcix
fpga/mcs/: .gitattributes  README.md  growth_fy2016_fpga_20160831_2144.mcs  growth_fy2016_fpga_20161010_1152.mcs
fpga/sources/: TopFile_FY2016.vhdl
fpga/sources/FT245/: FT245.vhdl
fpga/tcl/: create_project_then_compile.tcl
growth_config/: growth_config.yaml
growth_config/growth-fy2016z/: growth_config.yaml
scripts/CRREAT/: crontab.txt  crontab_sudo.txt
scripts/fy2016_fpga_board_test_scripts/: led.rb  read_slow_adc.rb  switch.rb  write_slow_dac.rb
scripts/fy2016_portforward_scripts/: auto_portforward.sh_sample  crontab.txt  crontab_sudo.txt  kill_forwarding.sh
scripts/fy2016_telemetry_scripts/: auto_portforward.sh_sample  growth_fy2016_rsync_strage.sh  lan_reset.sh  lan_reset.sh_wireless  tell_ip.sh_sample
scripts/fy2017_scripts/: README  auto_portforward.sh  growth_config.yaml  lan_reset.sh  lan_reset_reboot.sh  norikura_ql.rb  ntp_logger.sh  setup.sh
setup/: 00_setup_all.sh  hosts  install_adafruit_ssd1306.sh  install_apt-get.sh  install_brew.sh  install_cmake.sh  install_libbcm2835.sh  install_python.sh  install_ruby_gem.sh  install_wiringPi.sh  log_adafruit.text  log_apt.text  log_python.text  log_ruby_gem.text  log_wiringPi.text  setenv.sh  setup_ssh.sh  setup_usb_current.sh  upgrade_kernel.sh  zshrc
(+58 files in other folders)
